--- a/source/styles/global/sprite.scss
+++ b/source/styles/global/sprite.scss
@@ -9,88 +9,99 @@
 //
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
-$browser-name: 'browser';
-$browser-x: 167px;
-$browser-y: 343px;
-$browser-offset-x: -167px;
-$browser-offset-y: -343px;
-$browser-width: 142px;
-$browser-height: 113px;
-$browser-total-width: 758px;
-$browser-total-height: 621px;
-$browser-image: '../images/sprite.png';
-$browser: (167px, 343px, -167px, -343px, 142px, 113px, 758px, 621px, '../images/sprite.png', 'browser', );
-$cube-name: 'cube';
-$cube-x: 500px;
-$cube-y: 268px;
-$cube-offset-x: -500px;
-$cube-offset-y: -268px;
-$cube-width: 71px;
-$cube-height: 71px;
-$cube-total-width: 758px;
-$cube-total-height: 621px;
-$cube-image: '../images/sprite.png';
-$cube: (500px, 268px, -500px, -268px, 71px, 71px, 758px, 621px, '../images/sprite.png', 'cube', );
-$face-name: 'face';
-$face-x: 422px;
-$face-y: 268px;
-$face-offset-x: -422px;
-$face-offset-y: -268px;
-$face-width: 78px;
-$face-height: 72px;
-$face-total-width: 758px;
-$face-total-height: 621px;
-$face-image: '../images/sprite.png';
-$face: (422px, 268px, -422px, -268px, 78px, 72px, 758px, 621px, '../images/sprite.png', 'face', );
-$imac-name: 'imac';
-$imac-x: 0px;
-$imac-y: 0px;
-$imac-offset-x: 0px;
-$imac-offset-y: 0px;
-$imac-width: 422px;
-$imac-height: 343px;
-$imac-total-width: 758px;
-$imac-total-height: 621px;
-$imac-image: '../images/sprite.png';
-$imac: (0px, 0px, 0px, 0px, 422px, 343px, 758px, 621px, '../images/sprite.png', 'imac', );
-$iphone-name: 'iphone';
-$iphone-x: 0px;
-$iphone-y: 343px;
-$iphone-offset-x: 0px;
-$iphone-offset-y: -343px;
-$iphone-width: 167px;
-$iphone-height: 134px;
-$iphone-total-width: 758px;
-$iphone-total-height: 621px;
-$iphone-image: '../images/sprite.png';
-$iphone: (0px, 343px, 0px, -343px, 167px, 134px, 758px, 621px, '../images/sprite.png', 'iphone', );
-$light-name: 'light';
-$light-x: 0px;
-$light-y: 477px;
-$light-offset-x: 0px;
-$light-offset-y: -477px;
-$light-width: 96px;
-$light-height: 144px;
-$light-total-width: 758px;
-$light-total-height: 621px;
-$light-image: '../images/sprite.png';
-$light: (0px, 477px, 0px, -477px, 96px, 144px, 758px, 621px, '../images/sprite.png', 'light', );
-$works-name: 'works';
-$works-x: 422px;
-$works-y: 0px;
-$works-offset-x: -422px;
-$works-offset-y: 0px;
-$works-width: 336px;
-$works-height: 268px;
-$works-total-width: 758px;
-$works-total-height: 621px;
-$works-image: '../images/sprite.png';
-$works: (422px, 0px, -422px, 0px, 336px, 268px, 758px, 621px, '../images/sprite.png', 'works', );
-$spritesheet-width: 758px;
-$spritesheet-height: 621px;
+$adobe-systems-logo-name: 'adobe_systems_logo';
+$adobe-systems-logo-x: 0px;
+$adobe-systems-logo-y: 190px;
+$adobe-systems-logo-offset-x: 0px;
+$adobe-systems-logo-offset-y: -190px;
+$adobe-systems-logo-width: 162px;
+$adobe-systems-logo-height: 37px;
+$adobe-systems-logo-total-width: 328px;
+$adobe-systems-logo-total-height: 276px;
+$adobe-systems-logo-image: '../images/sprite.png';
+$adobe-systems-logo: (0px, 190px, 0px, -190px, 162px, 37px, 328px, 276px, '../images/sprite.png', 'adobe_systems_logo', );
+$behance-name: 'behance';
+$behance-x: 0px;
+$behance-y: 227px;
+$behance-offset-x: 0px;
+$behance-offset-y: -227px;
+$behance-width: 96px;
+$behance-height: 49px;
+$behance-total-width: 328px;
+$behance-total-height: 276px;
+$behance-image: '../images/sprite.png';
+$behance: (0px, 227px, 0px, -227px, 96px, 49px, 328px, 276px, '../images/sprite.png', 'behance', );
+$canva-name: 'canva';
+$canva-x: 0px;
+$canva-y: 0px;
+$canva-offset-x: 0px;
+$canva-offset-y: 0px;
+$canva-width: 108px;
+$canva-height: 102px;
+$canva-total-width: 328px;
+$canva-total-height: 276px;
+$canva-image: '../images/sprite.png';
+$canva: (0px, 0px, 0px, 0px, 108px, 102px, 328px, 276px, '../images/sprite.png', 'canva', );
+$cisco-logo-name: 'cisco-logo';
+$cisco-logo-x: 108px;
+$cisco-logo-y: 0px;
+$cisco-logo-offset-x: -108px;
+$cisco-logo-offset-y: 0px;
+$cisco-logo-width: 144px;
+$cisco-logo-height: 62px;
+$cisco-logo-total-width: 328px;
+$cisco-logo-total-height: 276px;
+$cisco-logo-image: '../images/sprite.png';
+$cisco-logo: (108px, 0px, -108px, 0px, 144px, 62px, 328px, 276px, '../images/sprite.png', 'cisco-logo', );
+$guideline-based-name: 'guideline-based';
+$guideline-based-x: 162px;
+$guideline-based-y: 190px;
+$guideline-based-offset-x: -162px;
+$guideline-based-offset-y: -190px;
+$guideline-based-width: 154px;
+$guideline-based-height: 26px;
+$guideline-based-total-width: 328px;
+$guideline-based-total-height: 276px;
+$guideline-based-image: '../images/sprite.png';
+$guideline-based: (162px, 190px, -162px, -190px, 154px, 26px, 328px, 276px, '../images/sprite.png', 'guideline-based', );
+$infosys-logo-name: 'infosys-logo';
+$infosys-logo-x: 0px;
+$infosys-logo-y: 148px;
+$infosys-logo-offset-x: 0px;
+$infosys-logo-offset-y: -148px;
+$infosys-logo-width: 180px;
+$infosys-logo-height: 42px;
+$infosys-logo-total-width: 328px;
+$infosys-logo-total-height: 276px;
+$infosys-logo-image: '../images/sprite.png';
+$infosys-logo: (0px, 148px, 0px, -148px, 180px, 42px, 328px, 276px, '../images/sprite.png', 'infosys-logo', );
+$instagram-name: 'instagram';
+$instagram-x: 252px;
+$instagram-y: 0px;
+$instagram-offset-x: -252px;
+$instagram-offset-y: 0px;
+$instagram-width: 76px;
+$instagram-height: 82px;
+$instagram-total-width: 328px;
+$instagram-total-height: 276px;
+$instagram-image: '../images/sprite.png';
+$instagram: (252px, 0px, -252px, 0px, 76px, 82px, 328px, 276px, '../images/sprite.png', 'instagram', );
+$invision-name: 'invision';
+$invision-x: 0px;
+$invision-y: 102px;
+$invision-offset-x: 0px;
+$invision-offset-y: -102px;
+$invision-width: 183px;
+$invision-height: 46px;
+$invision-total-width: 328px;
+$invision-total-height: 276px;
+$invision-image: '../images/sprite.png';
+$invision: (0px, 102px, 0px, -102px, 183px, 46px, 328px, 276px, '../images/sprite.png', 'invision', );
+$spritesheet-width: 328px;
+$spritesheet-height: 276px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($browser, $cube, $face, $imac, $iphone, $light, $works, );
-$spritesheet: (758px, 621px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($adobe-systems-logo, $behance, $canva, $cisco-logo, $guideline-based, $infosys-logo, $instagram, $invision, );
+$spritesheet: (328px, 276px, '../images/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
