--- a/source/styles/global/base.scss
+++ b/source/styles/global/base.scss
@@ -1,16 +1,15 @@
 body {
-    font-family: "";
-    font-size: 1rem;
-    line-height: 1.3rem;
+    font-family: 'sansationregular';
+    line-height: 1rem;
     background: #fff;
 }
 html {
     box-sizing: border-box;
+    font-size: 10px;
 }
 
-*, *:after :before {
+* {
     margin: 0px;
-    box-sizing: inherit;
     border: 0;
     padding: 0;
     outline: 0;
