--- a/source/styles/global/fonts.scss
+++ b/source/styles/global/fonts.scss
@@ -18,8 +18,8 @@
 
 @font-face {
     font-family: 'sansationbold';
-    src: url('7fonts.ru_sansation_bold-webfont.woff2') format('woff2'),
-         url('7fonts.ru_sansation_bold-webfont.woff') format('woff');
+    src: url("../fonts/7fonts.ru_sansation_bold-webfont.woff2") format("woff2"),
+         url("../fonts/7fonts.ru_sansation_bold-webfont.woff") format("woff");
     font-weight: normal;
     font-style: normal;
 
@@ -36,8 +36,8 @@
 
 @font-face {
     font-family: 'sansationregular';
-    src: url('7fonts.ru_sansation_regular-webfont.woff2') format('woff2'),
-         url('7fonts.ru_sansation_regular-webfont.woff') format('woff');
+    src: url("../fonts/7fonts.ru_sansation_regular-webfont.woff2") format("woff2"),
+         url("../fonts/7fonts.ru_sansation_regular-webfont.woff") format("woff");
     font-weight: normal;
     font-style: normal;
 
