--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -7,5 +7,5 @@ html(lang='ru')
     link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous")
     title Business
   body
-
+      include section/header
       
