--- a/source/styles/global/fonts.scss
+++ b/source/styles/global/fonts.scss
@@ -27,8 +27,8 @@
 
 @font-face {
     font-family: 'sansationlight';
-    src: url('7fonts.ru_sansation_light-webfont.woff2') format('woff2'),
-         url('7fonts.ru_sansation_light-webfont.woff') format('woff');
+    src: url('../fonts/7fonts.ru_sansation_light-webfont.woff2') format('woff2'),
+         url('../fonts/7fonts.ru_sansation_light-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -45,8 +45,8 @@
 
 @font-face {
     font-family: 'neotericbold';
-    src: url('neoterice_-_bold_demo_version-webfont.woff2') format('woff2'),
-         url('neoterice_-_bold_demo_version-webfont.woff') format('woff');
+    src: url('../fonts/neoterice_-_bold_demo_version-webfont.woff2') format('woff2'),
+         url('../fonts/neoterice_-_bold_demo_version-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -54,8 +54,8 @@
 
 @font-face {
     font-family: 'neotericregular';
-    src: url('neoterice_-_regular_demo_version-webfont.woff2') format('woff2'),
-         url('neoterice_-_regular_demo_version-webfont.woff') format('woff');
+    src: url('../fonts/neoterice_-_regular_demo_version-webfont.woff2') format('woff2'),
+         url('../fonts/neoterice_-_regular_demo_version-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
