--- a/source/styles/global/base.scss
+++ b/source/styles/global/base.scss
@@ -1,7 +1,7 @@
 body {
     font-family: 'sansationregular';
     line-height: 1rem;
-    background: #fff;
+    background: #282828;
 }
 html {
     box-sizing: border-box;
