--- a/source/styles/global/nav.scss
+++ b/source/styles/global/nav.scss
@@ -15,6 +15,7 @@
         color: #fff;
         font: 400 1.264rem 'sansationregular' , sans-serif;
         text-transform: capitalize;
+        cursor: pointer;
 
         &:first-of-type {
             margin: 0;
