--- a/source/styles/section/hero.scss
+++ b/source/styles/section/hero.scss
@@ -1,3 +1,7 @@
+.hero {
+    background: #373737;
+}
+
 .hero__menu {
     display: flex;
     justify-content: flex-start;
@@ -10,6 +14,12 @@
     align-items: flex-start;
     text-align: left;
     padding: 45px 0 90px 45px;
+    background: #fff;
+    box-sizing: border-box;
+
+    &:first-child {
+        padding: 0;
+    }
 }
 
 .hero__title {
