--- a/source/template/section/header.pug
+++ b/source/template/section/header.pug
@@ -1,5 +1,5 @@
-header.header
-    .container
+.container
+    header.header
         .menu-block
             span.logo LO
             nav.nav
@@ -16,7 +16,7 @@ header.header
                     i.fab.fa-facebook-f(aria-hidden="true")
                 a.social__icon(href="https://twitter.com", target="_blank",) 
                     i.fab.fa-twitter(aria-hidden="true")
-                a.social__icon 
+                a.social__icon(href="https://twitter.com", target="_blank",)
                     i.fab.fa-google-plus-g(aria-hidden="true")
         .banner-block
             a.button__header
@@ -31,4 +31,3 @@ header.header
                     //-  хотів зробити це з допомогою псевдолементів але не вийшло
             a.button__header
                  i.fa.fa-angle-right
-                    
