--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -10,3 +10,4 @@ html(lang='ru')
       include section/header
       include section/hero
       include section/service
+      include section/feedback
