--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -11,3 +11,4 @@ html(lang='ru')
       include section/hero
       include section/service
       include section/feedback
+      include section/client
