--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -20,6 +20,8 @@
  @import "section/title";
  @import "section/feedback";
  @import "section/client";
+ @import "section/form";
+ @import "section/footer";
 
  
 
