--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -12,3 +12,4 @@ html(lang='ru')
       include section/service
       include section/feedback
       include section/client
+      include section/footer
