--- a/source/template/section/client.pug
+++ b/source/template/section/client.pug
@@ -22,4 +22,11 @@
                 .icon-canva
             li.client__item
                 .icon-instagram
-            
+    section.form
+        .form__text 
+            h3.form__title Any Queries | Get a quote
+            p.form__description If you have any questions or queries regarding our service or pricing don’t worry  Our experts will call you.
+        .form__fields
+            input.form__input(type="text", placeholder="Your name")
+            input.form__input(type="text", placeholder="Your number")
+            button(type="submit").button-form Get a call
